# log_mel_spectrogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: csharp_binding.hpp  log_mel_spectrogram.hpp
src/: csharp_binding.cpp  log_mel_spectrogram.cpp  pybind11_binding.cpp
test/csharp/: LogMelSpectrogramCS.csproj  Program.cs
test/python/: simple_test.py  whisper_test.py  whisper_test_debug.py
